fix(media manager ui): fix task list layout issue

--- a/meteor/client/styles/systemStatus.scss
+++ b/meteor/client/styles/systemStatus.scss
@@ -242,7 +242,10 @@
 			}
 
 			.workflow__header__expand {
+    			flex: 1 1;
+				text-align: center;
 				cursor: pointer;
+
 				&:hover {
 					text-decoration: underline;
 				}
